kubernetes/apps/network/envoy-gateway/gateway/internal/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.astrateam.net
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 10.1.130.102
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: internal-proxy-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.astrateam.net"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.astrateam.net"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: astrateam-net-tls
